# Info_7

Header/: view.h
Info 7/: CMakeLists.txt  Main.cpp  README.txt  board.cpp  board.h  main.cpp  mask.cpp  mask.h  old_type.cpp  type.cpp  type.h  view.cpp  view.h
Info 7/Header/: board.h  game.h  historique.h  mask.h  old_type.h  stockfish.h  test_function.h  type.h
Info 7/Source/: board.cpp  game.cpp  historique.cpp  mask.cpp  old_type.cpp  stockfish.cpp  test_function.cpp  type.cpp  view.cpp
Source/: view.cpp
